Fix figure image alignment

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -30,6 +30,11 @@ html, body {
 figure {
     text-align: center;
     margin: 1em;
+	
+	img {
+		max-width: 100%;
+		height: auto;
+	}
 }
 
 figcaption {
